--- a/app/views/main/question.html.erb
+++ b/app/views/main/question.html.erb
@@ -1,2 +1,20 @@
-<h1>Main#question</h1>
-<p>Find me in app/views/main/question.html.erb</p>
+<h1>Question <%= @qnum %></h1>
+
+<div class = "container">
+	<div class = "row">
+		<div class = "col-3"></div>
+		<div class = "col-6">
+			<p><%= @question.question %></p>
+
+			<%= form_tag :action=> 'nextQuestion' do %>
+				<% JSON.parse(@question.answers).each do |key, answer| %>
+					<% if answer != nil %>
+						<label><%= check_box_tag 'answer', key %> <span style="padding-left: 10px"><%= answer %></span> </label><br>
+					<% end %>
+				<% end %>
+				<%= submit_tag "Submit" %>
+			<% end %>
+		</div>
+		<div class = "col-3"></div>
+	</div>
+</div>
